--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,22 +4,22 @@ Date: 2015-04-17
 Title: Analyse GEOtop simulations
 Author: Johannes Brenner <Johannes.Brenner@eurac.com>
 Maintainer: Johannes Brenner <Johannes.Brenner@eurac.com>
-Description: Read output from GEOtop simulations and analyse in terms of e.g. hydrological budget, simulation validation, maps animation.
-Depends: R (>= 3.0.0)
+Description: Read output from GEOtop simulations and analyse in terms of e.g.
+    hydrological budget, simulation validation, maps animation.
+Depends:
+    R (>= 3.0.0),geotopbricks,ggplot2,RSAGA
 License: LGPL (>= 2)
 LazyData: Yes
 LazyLoad: Yes
 Imports:
-    geotopbricks,
     chron,
     zoo,
     hydroGOF,
     soilwater,
     raster,
     sp,
-    ggplot2,
-    xts,
-    RSAGA,
+	xts,
     stringr,
     data.table,
     dplyr
+RoxygenNote: 5.0.1
