--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,6 @@ export(GEOtop_ReadPlotRst)
 export(GEOtop_ReadPointData)
 export(GEOtop_ReadPointVar)
 export(GEOtop_ReadValidationData)
-export(GEOtop_VisSoilWaterRet)
 export(GEOtop_animateMAPS)
 export(GEOtop_updateLookUpTbl)
 importFrom(RSAGA,read.ascii.grid)
@@ -18,7 +17,9 @@ importFrom(RSAGA,rsaga.local.morphometry)
 importFrom(RSAGA,rsaga.sgrd.to.esri)
 importFrom(RSAGA,write.ascii.grid)
 importFrom(chron,chron)
+importFrom(data.table,as.data.table)
 importFrom(dplyr,'%>%')
+importFrom(geotopbricks,declared.geotop.inpts.keywords)
 importFrom(geotopbricks,get.geotop.inpts.keyword.value)
 importFrom(geotopbricks,pointer.to.maps.xyz.time)
 importFrom(ggplot2,aes)
@@ -28,9 +29,12 @@ importFrom(ggplot2,element_text)
 importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_raster)
+importFrom(ggplot2,geom_text)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,ggsave)
 importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,scale_fill_gradient)
+importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_bw)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,grey)
@@ -59,6 +63,7 @@ importFrom(stats,qqplot)
 importFrom(stats,sd)
 importFrom(stats,time)
 importFrom(stats,window)
+importFrom(stringr,str_split)
 importFrom(utils,data)
 importFrom(utils,head)
 importFrom(utils,read.csv)
