--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: AnalyseGeotop
 Version: 1.0
-Date: 2015-04-17
-Title: Analyse GEOtop simulations
+Date: 2015-05-17
+Title: Analyse GEOtop Simulations
 Author: Johannes Brenner <Johannes.Brenner@eurac.com>
 Maintainer: Johannes Brenner <Johannes.Brenner@eurac.com>
 Description: Read output from GEOtop simulations and analyse in terms of e.g.
