--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: AnalyseGeotop
 Version: 1.0
-Date: 2015-05-17
+Date: 2016-06-06
 Title: Analyse GEOtop Simulations
 Author: Johannes Brenner <Johannes.Brenner@eurac.com>
 Maintainer: Johannes Brenner <Johannes.Brenner@eurac.com>
 Description: Read output from GEOtop simulations and analyse in terms of e.g.
     hydrological budget, simulation validation, maps animation.
 Depends:
-    R (>= 3.0.0),geotopbricks,ggplot2,RSAGA
+    R (>= 3.0.0),geotopbricks,ggplot2,RSAGA,data.table,dplyr
 License: LGPL (>= 2)
 LazyData: Yes
 LazyLoad: Yes
@@ -18,8 +18,5 @@ Imports:
     soilwater,
     raster,
     sp,
-	xts,
-    stringr,
-    data.table,
-    dplyr
+	xts,stringr
 RoxygenNote: 5.0.1
